Ptrace should take a virtual address not a capability.
A cross-address-space capability aware debugging facility is out of
scope at the moment and will probably look quite different.

--- a/sys/compat/cheriabi/syscalls.master
+++ b/sys/compat/cheriabi/syscalls.master
@@ -95,7 +95,7 @@
 24	AUE_GETUID	NOPROTO	{ uid_t getuid(void); }
 25	AUE_GETEUID	NOPROTO	{ uid_t geteuid(void); }
 26	AUE_PTRACE	NOPROTO	{ int ptrace(int req, pid_t pid, \
-				    caddr_t addr, int data); }
+				    vaddr_t addr, int data); }
 27	AUE_RECVMSG	STD	{ int cheriabi_recvmsg(int s, struct msghdr_c *msg, \
 				    int flags); }
 28	AUE_SENDMSG	STD	{ int cheriabi_sendmsg(int s, struct msghdr_c *msg, \
