cheriabi_ioctl arguments will need hand parsing.

--- a/sys/compat/cheriabi/syscalls.master
+++ b/sys/compat/cheriabi/syscalls.master
@@ -161,9 +161,8 @@
 53	AUE_SIGALTSTACK	STD	{ int cheriabi_sigaltstack( \
 				    _In_opt_ const cheriabi_stack_t *ss, \
 				    _Out_opt_ cheriabi_stack_t *oss); }
-; XXX-BD: no annotation driven way to validate data
-54	AUE_NULL	STD	{ int cheriabi_ioctl(int fd, u_long com, \
-				    _Inout_opt_ caddr_t data); }
+54	AUE_NULL	STD|NOPARSE	{ int cheriabi_ioctl(int fd, \
+				    u_long com, _Inout_opt_ caddr_t data); }
 55	AUE_REBOOT	NOPROTO	{ int reboot(int opt); }
 56	AUE_REVOKE	NOPROTO	{ int revoke(_In_z_ const char *path); }
 57	AUE_SYMLINK	NOPROTO	{ int symlink(_In_z_ const char *path, \
