--- a/sys/compat/cheriabi/syscalls.master
+++ b/sys/compat/cheriabi/syscalls.master
@@ -401,12 +401,11 @@
 199	AUE_LSEEK	OBSOL	lseek
 200	AUE_TRUNCATE	OBSOL	truncate
 201	AUE_FTRUNCATE	OBSOL	ftruncate
-; XXX-BD: no way to reflect dependent nullness
 202	AUE_SYSCTL	NOPROTO	{ int __sysctl(_In_z_ int *name, \
 				    u_int namelen, \
 				    _Out_writes_bytes_opt_(*oldlenp) \
 				    void *old, _Inout_opt_ size_t *oldlenp, \
-				    _In_reads_bytes_(newlen) void *new, \
+				    _In_reads_bytes_opt_(newlen) void *new, \
 				    void newlen); } __sysctl sysctl_args int
 203	AUE_MLOCK	NOPROTO	{ int mlock( \
 				    _In_pagerange_(len) const void *addr, \
