Add a cheriabi_mprotect() syscall.
The CheriABI version only allows permisions that are a subset of the
capabiltiy permissions.  At noted in the comment, one could make a case
for allowing current page permissions to be retained even if the
capability does not contain them.  For now, I've not done that any have
added EXEC permission to the base capability in the ELF auxargs list to
keep rtld working.

--- a/sys/compat/cheriabi/syscalls.master
+++ b/sys/compat/cheriabi/syscalls.master
@@ -195,7 +195,7 @@
 				    ovadvise_args int
 73	AUE_MUNMAP	NOPROTO	{ int munmap(_Pagerange_(len) void *addr, \
 				    size_t len); }
-74	AUE_MPROTECT	NOPROTO	{ int mprotect( \
+74	AUE_MPROTECT	STD	{ int cheriabi_mprotect( \
 				    _Pagerange_(len) const void *addr, \
 				    size_t len, int prot); }
 75	AUE_MADVISE	NOPROTO	{ int madvise(_Pagerange_(len) void *addr, \
